@@ -77,6 +77,9 @@ Open Vehicle Monitor System v3 - Change log
 - VW e-Up/OBD: polling control for diagnostic/adaptation sessions
   New command:
     xvu polling <status|pause|continue>   -- temporarily pause OBD2 polling
+- VW e-Up: added SOC monitoring log
+  New configs:
+    [xvu] log.socmon.storetime            -- days, 0=off
 - New vehicle: Hyundai Ioniq vFL (HIONVFL)
   https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
 - Webserver: support TLS (https, wss) using self-signed certificates
